--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
         </div>
         <h1 class="slogan">Transformando tu Mundo con Innovación Tecnológica, Siempre Wow, Siempre Innovando.</h1>
-        <p class="address">Av. de la Unión #101 Interior 22</p>
+        <p class="address">Av. de la Unión #101 Interior 2</p>
         <div class="social-media">
             <a href="https://www.facebook.com/profile.php?id=100067801375572&mibextid=ZbWKwL" target="_blank" class="social-link">
                 <img src="facebook-icon.png" alt="Facebook" class="social-icon">Facebook
@@ -22,7 +22,7 @@
             <a href="https://www.instagram.com/tu_perfil" target="_blank" class="social-link">
                 <img src="instagram-icon.png" alt="Instagram" class="social-icon">Instagram
             </a>
-            <a href="https://wa.me/+5214922563635" target="_blank" class="social-link">
+            <a href="https://wa.me/52149422563635" target="_blank" class="social-link">
                 <img src="whatsapp-icon.png" alt="WhatsApp" class="social-icon">WhatsApp
             </a>
             <a href="https://maps.app.goo.gl/4en5yJUMe5FtoadbA" target="_blank" class="social-link">
@@ -32,3 +32,4 @@
     </div>
 </body>
 </html>
+
