--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="https://www.facebook.com/profile.php?id=100067801375572&mibextid=ZbWKwL" target="_blank" class="social-link">
                 <img src="facebook-icon.png" alt="Facebook" class="social-icon">Facebook
             </a>
-            <a href="https://www.instagram.com/tu_perfil" target="_blank" class="social-link">
+            <a href="https://www.instagram.com/wow_innovando?igsh=bm82cGlrZGdjZnFq" class="social-link">
                 <img src="instagram-icon.png" alt="Instagram" class="social-icon">Instagram
             </a>
             <a href="https://wa.me/52149422563635" target="_blank" class="social-link">
